fixed new table classes so content aligns top vertically

--- a/stylesheets/less/main.less
+++ b/stylesheets/less/main.less
@@ -99,6 +99,7 @@ h1, h2, h3, h4, h5 {
     .table_row {
         display: table-row;
         .table_cell {
+            vertical-align: top;
             display: table-cell;
         }
     }
